cursor:pointer added to btn-next to test posible bug with click event on mobile safari

--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,7 @@ body {
   position: fixed;
   top: 0;
   right: -85%;
+  cursor: pointer;
 }
 
 @keyframes move {
